@startuml class

package "core" {
    ' class App {
    '     +__init__() : None
    '     +run() : None
    ' }

    class CustomCTk {
        #now_page: Any
        #pages_conn: dict
        +set_page(view_class: Any, controller: Any) : None
        +show_page(page_name: str) : None
    }

    abstract class BaseController {
        #root : Any
        #ViewClass : Any
        - view : Any
        +show() : None
        +goto_page(page_name: str) : None
        - _send_view_data() : dict
    }
}

package "controllers" {
    class Page1Controller {
        - my_model:Any
        +__init__(root: Any, my_model: Any) : None
        +_send_view_data() : dict
        - data_send() : None
    }

    class Page2Controller {
        - my_model:Any
        +__init__(root: Any, my_model: Any) : None
        - _send_view_data() : dict
    }
}

package "models" {
    class MyModel {
        +title : StringVar
        +content : StringVar
    }
}

package "views" {
    class Page1 {
        - controller:Any
        - data:Any
        +__init__(master: Any, controller: Any, data: dict, **kwargs) : None
        +build_ui() : None
    }

    class Page2 {
        - controller:Any
        - data:Any
        +__init__(master: Any, controller: Any, data: dict={}, **kwargs) : None
        +build_ui() : None
    }
}

' App --> CustomCTk
' App --> Page1Controller
' App --> Page2Controller
' App --> MyModel

CustomCTk --> BaseController
CustomCTk o-- Page1Controller : 管理
CustomCTk o-- Page2Controller : 管理

Page1Controller --> MyModel
Page2Controller --> MyModel

BaseController <|-- Page1Controller : 継承
BaseController <|-- Page2Controller : 継承

Page1Controller --> Page1
Page2Controller --> Page2

@enduml
